# embedding-service

./: .gitignore  README.md  embedding-service.yaml  embedding-service.yaml.sample  env.sample  pyproject.toml
docs/: micro_service.md
docs/sdk_usages/: 1_embedding.md  2_reranker.md  embedding-service.yaml
src/embedding_service/: __init__.py  adapters.py  app.py  async_embedding_client.py  utilities.py
src/embedding_service/models/: __init__.py  abstract_models.py  bge_m3.py  bge_reranker.py  glm_reranker.py  qwen3_embedding.py  qwen3_reranker.py  qwen3_reranker_model.py  splade_v3.py
src/embedding_service/schemas/: __init__.py  request_schemas.py  response_schemas.py
