[project]
name = "embedding-service"
version = "0.1.0"
description = "Microservice for embedding and reranker models invoking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "flagembedding>=1.3.5",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1; sys_platform == 'win32'",
    "torch>=2.9.1; sys_platform == 'linux'",
    "torch>=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "uvicorn>=0.38.0",
]

[project.scripts]
embedding-service = "embedding_service.app:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pymilvus>=2.6.5",
    "pymilvus-model>=0.3.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

